tests/reference/asr-do_zero_increment-06c400d.stderr
semantic error: Step expression (Increment) in DO loop cannot be zero
 --> tests/errors/do_zero_increment.f90:4:14
  |
4 | do i = 1, 5, 0
  |              ^ 
